# claude-code-status-tracker

./: .gitignore  CLAUDE.md  README.md  compact.py  install.sh  justfile  pyproject.toml  report_pdf.py  sessions.py  track-and-status.py  usage.py
.claude/: settings.json
.claude/hooks/: run-tests-on-edit.sh
.claude/skills/renew-subscription/: SKILL.md
.githooks/: pre-commit
tests/: conftest.py  test_compact.py  test_report_pdf.py  test_track_and_status.py  test_usage.py
